--- a/app/templates/show/common/base.html
+++ b/app/templates/show/common/base.html
@@ -9,7 +9,7 @@
         <meta name="author" content="">
         <link rel="icon" href="{{ url_for('show.static', filename='images/favicon.ico')}}">
 
-        <title>{% block title %}报表系统{% endblock %}</title>
+        <title>{% block title %}WMS报表系统{% endblock %}</title>
         {% block css %}
             <!-- 新 Bootstrap 核心 CSS 文件 -->
             <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
